# clashogram

./: .envrc  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  Pipfile  README.md  README.rst  README_RU.rst  appveyor.yml  clashogram.py  pyproject.toml  requirements-to-freeze.txt  requirements.txt  setup.cfg  setup.py  systemd_unit.service  test_everything.py  tests.py
clashogram/: __init__.py  __main__.py  _clashogram.py  api.py  formatters.py  models.py  notifiers.py  utils.py
clashogram/locales/: messages.pot
clashogram/locales/fa_IR/LC_MESSAGES/: messages.mo  messages.po
clashogram/locales/ru/LC_MESSAGES/: messages.mo  messages.po
data/: full_destruction.json  inWar_40.json  notInWar.json  op_full_destruction.json  warEnded_50.json
locales/: messages.pot
locales/fa_IR/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
