[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'clashogram'
author = 'Mehdi Sadeghi'
author-email = 'mehdi@mehdix.rog'
home-page = 'https://github.com/mehdisadeghi/clashogram'
requires-python = '>=3.5'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
description-file = 'README.rst'
keywords = 'coc telegram clashofclans'
requires = ['requests',
            'jdatetime',
            'pytz',
            'python-dateutil',
            'click']

[tool.flit.metadata.requires-extra]
test = ['pytest']
i18n = ['babel']

[tool.flit.scripts]
clashogram = 'clashogram:main'
