[extract_messages]
input_dirs = .
output_file = ./locales/messages.pot

[init_catalog]
input_file = ./locales/messages.pot
output_dir = ./locales

[update_catalog]
input_file = ./locales/messages.pot
output_dir = ./locales

[compile_catalog]
directory = ./locales

[metadata]
description-file = README.md